--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,9 @@
 
 \maketitle
 
+El desarrollo de este informe se puede encontrar en el repositorio de \textcolor{blue}{
+    \href{https://github.com/CarlosMestas/TC_A_6_Carlos_Mestas}{GitHub}}.
+
 \section{Describir que pasa si no se considera el carácter “.” en el analizador léxico}
 
 Analiza lo que ingresemos, porque el caracter “.” sirve para reconocer el resto de símbolos que no formen parte del analizador léxico, por ejemplo si en nuestro analizador léxico programamos para que reconozca solo “abc”, al momento de nosotros ejecutar el programa si nosotros ingresamos abc, no habría ningún problema, pero en caso de que por ejemplo ingresemos “abcd” el programa nos diría que se reconoció abc, pero en la impresión también aparecería el caracter “d”. 
